Tutorial 3 completed, small refactoring to other tutorials.
Removed TileList class, as a standard vector works for the moment.

--- a/tutorial3/CMakeLists.txt
+++ b/tutorial3/CMakeLists.txt
@@ -1,6 +1,11 @@
+project(Tutorial3)
+
 include_directories(/usr/local/include/libtcod)
 include_directories(include)
 
-set(SOURCES src/tutorial3.cpp src/Actor.cpp src/Map.cpp src/Engine.cpp)
+set(SOURCES src/main.cpp 
+            src/Actor.cpp 
+            src/Map.cpp 
+            src/Engine.cpp)
 
 add_executable(tutorial3 ${SOURCES})
