--- a/tutorial2/CMakeLists.txt
+++ b/tutorial2/CMakeLists.txt
@@ -1,6 +1,11 @@
+project(Tutorial2)
+
 include_directories(/usr/local/include/libtcod)
 include_directories(include)
 
-set(SOURCES src/tutorial2.cpp src/Actor.cpp src/Map.cpp src/Engine.cpp)
+set(SOURCES src/main.cpp 
+            src/Actor.cpp 
+            src/Map.cpp 
+            src/Engine.cpp)
 
 add_executable(tutorial2 ${SOURCES})
