--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,6 @@ add_subdirectory(tutorial1)
 add_subdirectory(tutorial2)
 add_subdirectory(tutorial3)
 add_subdirectory(tutorial4)
+add_subdirectory(tutorial5)
 
 file(COPY terminal.png DESTINATION .)
