Added GameState enum to Engine.
Renamed Actor class to Entity.

Added stub classes for AI, Attacker, and Destructible components for Entities.

Added Observer pattern classes for decoupling systems.

Added basic Event structs for the Observer pattern.

Wrapped the x and y position code into the Point struct.

--- a/tutorial6/CMakeLists.txt
+++ b/tutorial6/CMakeLists.txt
@@ -4,8 +4,10 @@ include_directories(/usr/local/include/libtcod)
 include_directories(include)
 
 set(SOURCES src/main.cpp 
-            src/Actor.cpp 
+            src/AI.cpp
+            src/Entity.cpp 
             src/Map.cpp 
-            src/Engine.cpp)
+            src/Engine.cpp
+            src/Subject.cpp)
 
 add_executable(tutorial6 ${SOURCES})
