Implemented stub AI, Attacker, and Destructible Entity Components.
Moved Entity Components into subfolder.

Refactored to use Point structure rather than pure X-Y integer values for positions.

Restructured top-level main class and underlying engine for easier CMake structure.

Todo: Implement basic NPC AI using GameState struct passed from Engine to Entity.Update method.

--- a/tutorial6/CMakeLists.txt
+++ b/tutorial6/CMakeLists.txt
@@ -3,11 +3,9 @@ project(Tutorial6)
 include_directories(/usr/local/include/libtcod)
 include_directories(include)
 
-set(SOURCES src/main.cpp 
-            src/AI.cpp
-            src/Entity.cpp 
-            src/Map.cpp 
-            src/Engine.cpp
-            src/Subject.cpp)
+add_subdirectory(src)
+
+set(SOURCES main.cpp)
 
 add_executable(tutorial6 ${SOURCES})
+target_link_libraries(tutorial6 src)
